--- a/examples/vanilla/index.html
+++ b/examples/vanilla/index.html
@@ -7,11 +7,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
 </head>
 <body>
-	<script src="cdt.js"></script>
+	<script src="../../dist/cdt.js"></script>
 	<script>
+		const [w, h] = [400, 400];
+
 		let vertices, triangles, fixedEdges;
 		function setup() {
-			createCanvas(400, 400);
+			createCanvas(w, h);
 		}
 		function draw() {
 			background(150);
@@ -37,28 +39,42 @@
 	</script>
 	<script type="module">
 		CDTModule().then((Module) => {
-			const tri = new Module.Triangulation();
-			const verts = [];
-			const edges = [];
-			let startIndex = verts.length;
-			for (let a = 0; a < 2 * Math.PI; a += 0.1) {
-				verts.push({ x: 200 + 200 * Math.cos(a), y: 200 + 200 * Math.sin(a) });
-				if (a > 0) {
-					edges.push({ from: verts.length - 2, to: verts.length - 1 });
-				}
+
+			// console.log(Module.VIOTest.ONE);
+			console.log(Module.VertexInsertionOrder.Auto);
+
+			const tri = new Module.Triangulation(Module.VertexInsertionOrder.AsProvided, Module.IntersectingConstraintEdges.NotAllowed, 0.01);
+			const [verts, edges] = [[], []];
+
+			const center = { x: 0.5 * w, y: 0.5 * h };
+			const [innerRadius, innerSamples] = [100, 25];
+			const [outerRadius, outerSamples] = [200, 50];
+			const [midPadding, midSamples] = [10, 50];
+
+			for (let i = 0; i < outerSamples; i++) {
+				const a = map(i, 0, outerSamples, 0, 2 * Math.PI);
+				verts.push({
+					x: center.x + outerRadius * Math.cos(a),
+					y: center.y + outerRadius * Math.sin(a)
+				});
 			}
-			edges.push({ from: verts.length - 1, to: startIndex });
-			for (let a = 0; a < 2 * Math.PI; a += 0.1) {
-				verts.push({ x: 200 + 150 * Math.cos(a), y: 200 + 150 * Math.sin(a) });
+			edges.push(...Array.from({ length: outerSamples }, (_, i) => ({ from: i, to: (i + 1) % outerSamples })));
+
+			for (let i = 0; i < innerSamples; i++) {
+				const a = map(i, 0, innerSamples, 0, 2 * Math.PI);
+				verts.push({
+					x: center.x + innerRadius * Math.cos(a),
+					y: center.y + innerRadius * Math.sin(a)
+				});
 			}
-			startIndex = verts.length;
-			for (let a = 0; a < 2 * Math.PI; a += 0.1) {
-				verts.push({ x: 200 + 100 * Math.cos(a), y: 200 + 100 * Math.sin(a) });
-				if (a > 0) {
-					edges.push({ from: verts.length - 2, to: verts.length - 1 });
-				}
+			edges.push(...Array.from({ length: innerSamples }, (_, i) => ({ from: i + outerSamples, to: (i + 1) % innerSamples + outerSamples })));
+
+			for (let i = 0; i < midSamples; i++) {
+				const a = 2 * Math.PI * Math.random();
+				const r = (outerRadius - innerRadius - 2 * midPadding) * Math.random() + innerRadius + midPadding;
+				verts.push({ x: center.x + r * Math.cos(a), y: center.y + r * Math.sin(a) });
 			}
-			edges.push({ from: verts.length - 1, to: startIndex });
+
 			tri.insertVertices(verts);
 			tri.insertEdges(edges);
 			tri.eraseOuterTrianglesAndHoles();
